--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -204,3 +204,149 @@
 	width: 100%;
 	margin-bottom: 20px;
 }
+
+
+/* TRANSLATION SECTION */
+
+
+.translate {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	max-width: 1500px;
+	width: 100%;
+	padding: 20px;
+	margin-top: 100px;
+
+}
+
+.text-content {
+	flex: 1;
+	padding-right: 50px;
+	font-size: 32px;
+	font-weight:400;
+}
+
+.text-content span {
+	font-weight: bold;
+}
+
+
+.image-container {
+	flex: 1;
+	text-align: right;
+}
+
+.image-container img {
+	max-width: 100%;
+	height: auto;
+	border-radius: 5px;
+}
+
+
+/* FOOTER */
+
+.support-us {
+	text-align: center;
+}
+
+.support-us-title {
+	font-size: 36px;
+	font-weight: normal;
+	margin-bottom: 100px;
+}
+
+.support-us-button {
+	background-color: #DD341A;
+	padding: 25px 40px;
+	color: #fff;
+	font-weight: 500;
+	font-size: 24px;
+}
+
+
+
+
+
+
+
+
+.contact {
+	max-width: 1500px;
+	margin: 0 auto;
+	padding: 0 20px;
+	margin-top: 150px;
+}
+
+
+.contact-info {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+}
+
+.contact-box {
+	flex: 1;
+	padding: 0 20px;
+	/* text-align: center; */
+	max-width: 300px;
+}
+
+.contact-icon {
+	margin-bottom: 15px;
+	/* display: flex; */
+	justify-content: center;
+}
+
+.contact-icon img {
+	width: 50px;
+	height: 50px;
+}
+
+.contact-title {
+	font-size: 18px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.contact-text {
+	font-size: 14px;
+	line-height: 1.5;
+	color: #666;
+}
+
+.footer-bottom {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-top: 20px;
+	border-top: 1px solid #e7e7e7;
+}
+
+.policy-links {
+	display: flex;
+}
+
+.policy-links a {
+	margin-right: 20px;
+	color: #444;
+	text-decoration: none;
+	font-size: 14px;
+}
+
+.policy-links a:hover {
+	text-decoration: underline;
+}
+
+.social-links {
+	display: flex;
+}
+
+.social-icon {
+	margin-left: 15px;
+}
+
+.social-icon img {
+	width: 24px;
+	height: 24px;
+}
