--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -21,7 +21,7 @@
 
 .burger { 
 	display: none; 
-	display: flex;
+	/*display: flex;*/
 	flex-direction: column;
 	justify-content: space-between;
 
@@ -408,7 +408,7 @@
 
 @media (max-width: 675px) {
 	.burger {
-		display: flex
+		display: flex;
 	}
 
 	.menu-list {
